<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/in_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_title"
        android:textColor="@color/colorDark"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/in_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_source"/>

        <TextView
            android:id="@+id/in_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/in_time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/in_digg_text"/>

        <TextView
            android:id="@+id/in_digg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_test_num"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/in_separator"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/in_bury_text"/>

        <TextView
            android:id="@+id/in_bury"
            android:layout_width="wrap_content"
            android:text="@string/in_test_num"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/in_separator"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/in_repin_text"/>

        <TextView
            android:id="@+id/in_repin"
            android:layout_width="wrap_content"
            android:text="@string/in_test_num"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            />
    </LinearLayout>
</LinearLayout>